<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="contacts_permission_consent_title">Allow access to contacts from %1$s?</string>
    <string name="contacts_permission_consent_title_with_alexa_custom_assistant">Set up voice calling</string>
    <string name="contacts_permission_consent_body">Contacts will be periodically uploaded to the Amazon cloud to make it easier to find friends and family, and make calls.</string>
    <string name="contacts_permission_consent_body_with_alexa_custom_assistant">Call your phone contacts hands-free with [Acme Brandon] and Amazon Alexa. Your contacts on %1$s will be uploaded to the Amazon service.</string>
    <string name="contacts_upload_consent_title">Contacts</string>
    <string name="contacts_upload_consent_summary">Enable requests like \“Alexa, call Sam\” for contacts on this phone. Contacts will be uploaded to the Amazon service.</string>
    <string name="contacts_upload_consent_summary_with_alexa_custom_assistant">Upload contacts to the Amazon service to call \&amp; message them by name</string>
    <string name="contacts_consent_yes">Agree &amp; Allow</string>
    <string name="contacts_consent_yes_with_alexa_custom_assistant">Use contacts</string>
    <string name="contacts_consent_skip">Skip</string>
    <string name="comms_permission_status">Contacts %1$s</string>
    <string name="comms_permission_enabled">enabled</string>
    <string name="comms_permission_disabled">disabled</string>
    <string name="comms_sample_utterance">\"Alexa, call Sam\"</string>
    <string name="sms_consent_title">SMS Messages</string>
    <string name="sms_consent_summary">Hear messages from this phone when you ask \“Alexa, check my text messages\”. SMS messages will be uploaded to the Amazon service.</string>
    <string name="sms_consent_summary_with_alexa_custom_assistant">Upload SMS messages to the Amazon service to have them read to you</string>
    <string name="pair_new_device">Pair new</string>

    <string name="comms_calling_and_texting_title">Calling and Texting</string>
    <string name="comms_calling_and_texting_subtitle">You can use Alexa to call or text contacts from a connected phone.</string>
    <string name="comms_calling_title">Calling</string>
    <string name="comms_calling_subtitle">You can use Alexa to call from a connected phone.</string>
    <string name="comms_primary_phone_name">Primary: %1$s</string>
    <string name="comms_bluetooth_info">To connect to a different phone, visit:</string>
    <string name="comms_bluetooth_button_title">Bluetooth Settings</string>
    <string name="comms_disclaimer">Any other contacts saved to your Alexa account are also available. To manage this, go to the <b>Communicate</b> tab in the Alexa mobile app. </string>

    <!-- Contacts permission strings -->
    <string name="contacts_sms_permission_consent_title">Allow access to your contacts and SMS messages?</string>
    <string name="contacts_only_permission_consent_title">Allow access to your contacts?</string>
    <string name="contacts_sms_permission_consent_body">Contacts and SMS messages will be periodically uploaded to the Amazon cloud to make it easier to find friends and family, make calls, send and receive messages.</string>
    <string name="comms_sample_utterance_2">\"Alexa, read my messages\"</string>

</resources>