<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/communication_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:theme="@style/Theme.Alexa.Standard">

    <!--Next 3 guidelines describe the default margins that the visible elements are constrained to-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/setup_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/setup_bottom_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/left_margin_percentage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/right_margin_percentage" />

    <!--Alexa logo-->
    <ImageView
        android:id="@+id/alexa_img_view"
        android:layout_width="@dimen/login_alexa_image_width"
        android:layout_height="@dimen/login_alexa_image_height"
        android:layout_gravity="center"
        android:contentDescription="@string/alexa_logo_content_description"
        android:src="@drawable/alexa_logo"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/contacts_permission_alexa_image_topMargin"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Title-->
    <TextView
        android:id="@+id/contacts_permission_consent_heading"
        style="@style/Alexa.TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/contacts_permission_consent_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/alexa_img_view"
        android:layout_marginTop="@dimen/login_item_margin_top"
        />

    <!--Subtitle-->
    <TextView
        android:id="@+id/contacts_permission_consent_body"
        style="@style/Alexa.SubtitleText"
        android:text="@string/contacts_permission_consent_body"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/contacts_permission_consent_heading"
        android:layout_marginTop="@dimen/title_to_subtitle_margin"/>

    <!--Utterance-->
    <TextView
        android:id="@+id/alexa_contacts_hint1"
        style="@style/Alexa.UtteranceText"
        android:text="@string/comms_sample_utterance"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contacts_permission_consent_body"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/contacts_upload_yes_action_button"
        />

    <!-- Consent Button-->
    <TextView
        android:id="@+id/contacts_upload_skip_action_button"
        style="@style/Alexa.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_consent_skip"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/contacts_upload_yes_action_button"
        app:layout_constraintBottom_toBottomOf="@id/setup_bottom_guideline" />

    <!-- Skip button-->
    <TextView
        android:id="@+id/contacts_upload_yes_action_button"
        style="@style/Alexa.Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_consent_yes"
        app:layout_constraintStart_toEndOf="@id/contacts_upload_skip_action_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintBottom_toBottomOf="@id/setup_bottom_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>